<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:context=".QRscan">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp"
                tools:context=".QRscan">

                <TextView
                    android:id="@+id/specMonumentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/SpecMonumentName"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/specMonumentImg"/>

                <TextView
                    android:id="@+id/specMonumentInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:hint="@string/SpecMonumentDescription"
                    android:padding="12dp"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/endInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_ini"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            />

    </LinearLayout>

</ScrollView>