<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".create.CreateMonument">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="24dp">

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:id="@+id/createNET"
                     android:layout_marginTop="30dp"
                     android:padding="8dp"
                     android:hint="@string/CreateMonumentName"
                     android:background="@drawable/edit_text_rectangle"
                     android:drawablePadding="8dp"/>
             </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxHeight="300dp"
                     android:id="@+id/createDET"
                     android:layout_marginTop="30dp"
                     android:padding="8dp"
                     android:hint="@string/CreateMonumetDescription"
                     android:background="@drawable/edit_text_rectangle"
                     android:drawablePadding="8dp"/>
             </com.google.android.material.textfield.TextInputLayout>

         </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/edit_text_rectangle">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/uploadImg"
            android:src="@drawable/uploading"
            android:scaleType="fitCenter"
            android:layout_margin="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upload_imgage"
                android:padding="8dp"
                android:gravity="center"/>

        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:id="@+id/createButton"
        android:text="@string/CreateButton"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:layout_gravity="center">
    </Button>

 </LinearLayout>
