<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="70dp"
            android:text="BIENVENIDO!"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/logMIL">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_rectangle"
                android:id="@+id/logMET"
                android:hint="@string/CreateUserMail"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/logPIL"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rectangle"
                android:id="@+id/logPET"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:hint="@string/CreatePassword"
                android:inputType="textPassword"
                android:textColorHint="@color/yellow"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/LoginButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/loginButton"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/blue"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/GoRegister"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/yellow"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:text="Uicons de Flaticon: https://www.flaticon.com/uicons"
        android:textColorLink="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>