<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".create.EditUser">
        <TextView
            android:id="@+id/specUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/edit_user"
            android:textStyle="bold"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/CreateUsername"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/specUser"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/editAdmin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Admin"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/editUserName"
            android:layout_marginTop="16dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editDeleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@drawable/trashcan"
            android:backgroundTint="@color/red"
            android:layout_alignParentBottom="true"
            android:contentDescription="editFab"
            android:focusable="true" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_save"
            android:backgroundTint="@color/blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="editFab"
            android:focusable="true" />
    </RelativeLayout>
</layout>