<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/specMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/EditMonumentMenu"
        android:textStyle="bold"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editMonumentName"
                    android:layout_marginTop="30dp"
                    android:padding="8dp"
                    android:hint="@string/CreateMonumentName"
                    android:background="@drawable/edit_text_rectangle"
                    android:drawablePadding="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="300dp"
                    android:id="@+id/editMonumentInfo"
                    android:layout_marginTop="30dp"
                    android:padding="8dp"
                    android:hint="@string/CreateMonumetDescription"
                    android:background="@drawable/edit_text_rectangle"
                    android:drawablePadding="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/QRButton"
        android:backgroundTint="@color/yellow"
        android:layout_margin="30dp"
        android:text="@string/download_qr"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".create.EditMonument">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editDeleteMonument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:src="@drawable/trashcan"
            android:backgroundTint="@color/red"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="editFab"
            android:focusable="true" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_save"
            android:backgroundTint="@color/blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="editFab"
            android:focusable="true" />
    </RelativeLayout>
</LinearLayout>